Fixed look on mobile devices

--- a/resources/assets/sass/components/navbar.scss
+++ b/resources/assets/sass/components/navbar.scss
@@ -6,3 +6,29 @@
      outline: 0;
    }
 }
+
+.navbar-toggler-right {
+  position: relative;
+  float: right;
+}
+
+@include media-breakpoint-down(md) {
+  .navbar-collapse {
+	border-color: white;
+  }
+}
+
+@include media-breakpoint-down(sm) {
+  #bodyClick {
+	height: 100%;
+	width: 100%;
+	position: fixed;
+	opacity: 0;
+	top: 0;
+	left: auto;
+	right: 230px;
+	content: "";
+	z-index: 9999;
+	overflow-x: hidden;
+  }
+}
